@@ -12,6 +12,7 @@
 * Rethemed Admin section, thanks Keith Bishop
 * Supports GPS in photo metadata, links to Google maps
 * Cleaned up RSS feed
+* Return 404 code for unfound photos
 
 2.6.2  Will Entriken <cameralife AT phor.net>
 * Website update, thanks to Rajesh Sundaram
